# up1_robot

./: README.md
old_stuff/up1_manipulation/: package.xml  setup.py
old_stuff/up1_manipulation/scripts/: cartesian_path.py  pick_place.py
old_stuff/up1_manipulation/src/up1_misc/: boilerplate.py  calibration_rig.py
old_stuff/up1_perception/: CMakeLists.txt
old_stuff/up1_perception/launch/: image_processing.launch  web_video_server.launch
old_stuff/up1_perception/src/up1_perception/: disparity_redirector.py
old_stuff/up1_perception/web/: index.html
up1_bringup/: CMakeLists.txt  package.xml
up1_bringup/debian/: 10-up1-bringup.rules  checkwifi  dhcp_interfaces  hostapd_interfaces  ros-indigo-up1-bringup.udev  up1-dhcp  up1-hostapd
up1_hardware/: CMakeLists.txt  package.xml
up1_hardware/config/: modules.yaml  stereo_right.yaml
up1_hardware/launch/: hardware.launch  image_processing.launch  robot.launch  usb_cam.launch  web_video_server.launch
up1_manipulation/: CMakeLists.txt
up1_manipulation/meshes/: calibration_rig.stl
up1_manipulation/src/up1_manipulation/: cartesian.py  cartesian_approx.py  pick.py
up1_manipulation/src/up1_misc/: scene_tools.py  target_cube.py
up1_manipulation/src/up1_robot/: up1_robot.py
up1_perception/: package.xml  setup.py
up1_perception/config/: stereo_left.ini  stereo_left.yaml  stereo_right.ini
up1_perception/launch/: calibrate.launch  stereo_image_view.launch  usb_cam.launch  web_video_server.launch
up1_perception/scripts/: blob_listener.py  calibrate.sh  convert.sh  object_detection.py
up1_perception/src/up1_perception/: vision.py
up1_robot/: CMakeLists.txt  package.xml
up1_teleop/: CMakeLists.txt  package.xml
up1_teleop/config/: arm_poses.yaml
up1_teleop/launch/: cmdr_joy.launch  teleop_arm_joy.launch  teleop_arm_key.launch  teleop_demo.launch  teleop_eef_joy.launch  teleop_twist_joy.launch  teleop_twist_key.launch
up1_teleop/nodes/: cmdr_joy.py  teleop_arm_joy.py  teleop_eef_joy.py  teleop_twist_joy.py  teleop_twist_key.py
