<?xml version="1.0"?>
<package>
  <name>up1_hardware</name>
  <version>0.1.0</version>
  <description>UpDroid UP1 package for hardware interfaces and control</description>

  <maintainer email="mike@updroid.com">Mike Lewis</maintainer>

  <license>BSD</license>

  <url type="website">http://www.updroid.com</url>
  <url type="repository">http://bitbucket.org/updroid/up1_common</url>

  <author email="mike@updroid.com">Mike Lewis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>web_video_server</run_depend>

</package>
