<?xml version="1.0"?>
<package>
  <name>up1_teleop</name>
  <version>0.0.0</version>
  <description>up1_teleop</description>
  <maintainer email="nate@updroid.com">nate gallinger</maintainer>
  <license>BSD</license>
  <url>www.updroid.com</url>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ros_arduino_msgs</run_depend>
  <run_depend>python-serial</run_depend>
</package>
